--- a/sass/themes/pc/layout/header/_layout.scss
+++ b/sass/themes/pc/layout/header/_layout.scss
@@ -11,6 +11,8 @@
 
 // header
 > .wrap_header {
+    background-color: #ffffff;
+
     // downloadapp
     > .downloadapp {
         background-color: #2b2f32;
