--- a/sass/themes/pc/lib/_module.scss
+++ b/sass/themes/pc/lib/_module.scss
@@ -64,7 +64,7 @@
 @import "module/_pagination";
 
 // _breadcrumbs.scss
-// @import "module/_breadcrumbs.scss";
+@import "module/_breadcrumbs.scss";
 
 // _loading.scss
 @import "module/_loading";
