--- a/sass/themes/pc/lib/module/_filter.scss
+++ b/sass/themes/pc/lib/module/_filter.scss
@@ -13,5 +13,8 @@
 // _layout.scss
 @import "filter/layout";
 
-// _content.scss
-@import "filter/content";
+// _filter.scss
+@import "filter/filter";
+
+// _navlist.scss
+@import "filter/navlist";
