--- a/sass/themes/pc/lib/module/_icons.scss
+++ b/sass/themes/pc/lib/module/_icons.scss
@@ -43,10 +43,7 @@
         }
     }
 
-    // _rank.scss
-    // @import "icons/_rank";
-
-    // // _png.scss
+    // _png.scss
     @import "icons/_png";
 
     // // _svg.scss
