--- a/sass/themes/pc/page/profile/detail/_info.scss
+++ b/sass/themes/pc/page/profile/detail/_info.scss
@@ -8,23 +8,172 @@
 /*                info                */
 /**************************************/
 
-// _layout.scss
-@import "info/layout";
-
 .profile {
     // detail
     &.detail {
 
         // info
         > .info {
-            // _header.scss
-            @import "info/header";
+            display: flex;
+            margin-bottom: 0;
+            @include remCalc("padding", 20 106);
+            @include remCalc("border", (1 solid #eeeeee));
+            border-bottom: none;
 
-            // _content.scss
-            @import "info/content";
+            // user_img
+            > .user_img {
+                @include remCalc("margin-right", 108);
+                @include remCalc("width", 120);
+                @include remCalc("height", 120);
+            }
+            // user_img end
 
-            // _footer.scss
-            @import "info/footer";
+            // content
+            > .content {
+                flex: 1;
+
+                // title
+                > .title {
+                    display: flex;
+                    align-items: center;
+
+                    // sub
+                    > .sub {
+                        @include font-size(20);
+                        font-weight: 500;
+                        line-height: 1.4;
+                    }
+                    // sub end
+
+                    // rank
+                    > .rank {
+                        @include remCalc("margin-left", 20);
+                        @include font-size(12);
+                        line-height: 1.33;
+                        color: $base-color;
+                        text-transform: capitalize;
+
+                        // icon_rank
+                        > .icon_rank {
+                            @include remCalc("width", 20);
+                            @include remCalc("height", 20);
+                        }
+                        // icon_rank end
+                    }
+                    // rank end
+                }
+                // title end
+
+
+
+                // con
+                > .con {
+                    @include remCalc("margin-top", 5);
+                    @include font-size(12);
+                    color: $base-text-color2;
+                    line-height: 1.33;
+                }
+                // con end
+
+                // meta
+                > .meta {
+                    @include remCalc("margin-top", 20);
+
+                    // list
+                    > .list {
+                        > li {
+                            @include inline-block;
+                            @include remCalc("padding", 0 20);
+                            color: rgba(156, 156, 156, 0.87);
+                            @include font-size(12);
+                            line-height: 1;
+                            @include remCalc("border-right", (1 dotted #999999));
+
+
+                            &:first-child {
+                                padding-left: 0;
+                            }
+
+                            &:last-child {
+                                padding-right: 0;
+                                border: none;
+                            }
+
+                            // num
+                            > .num {
+                                @include inline-block(bottom);
+                                @include remCalc("margin-right", 7);
+                                color: $base-heading-color;
+                                @include font-size(16);
+                            }
+                            // num end
+                        }
+                    }
+                    // list end
+                }
+                // meta end
+
+                // tools
+                > .tools {
+                    @include remCalc("margin-top", 15);
+
+                    // ui_btn
+                    > .ui_btn {
+                        @include remCalc("padding", 10 25);
+                        @include remCalc("margin-right", 10);
+                        @include remCalc("border-radius", 100);
+                        font-weight: 500;
+                        line-height: 1;
+
+                        &:last-child {
+                            margin-right: 0;
+                        }
+
+                        // ui_icon
+                        > .ui_icon {
+                            @include remCalc("width", 16);
+                            @include remCalc("height", 16);
+                        }
+                        // ui_icon end
+
+                        // follow
+                        &.follow {
+                            @include remCalc("padding", 0 20);
+                            > .succssful {
+                                display: none;
+                            }
+                            > .txt {
+                                @include inline-block;
+                                @include remCalc("padding", 11 0);
+                            }
+
+                            &.succssful {
+                                @include remCalc("padding", 0 10);
+                                > .succssful {
+                                    @include inline-block;
+                                    @include remCalc("padding", 10 10 10 0);
+                                    @include remCalc("margin-right", 10);
+                                    @include remCalc("border-right", (1 solid rgba(#ffffff, 0.2)));
+                                    // ui_icon
+                                    > .ui_icon {
+                                        @include remCalc("width", 16);
+                                        @include remCalc("height", 16);
+                                    }
+                                    // ui_icon end
+
+                                    > .txt {
+                                        @include remCalc("padding", 10 0);
+                                    }
+                                }
+                            }
+                        }
+                        // follow end
+                    }
+                    // ui_btn end
+                }
+                // tools end
+            }
+            // content end
         }
         // info end
     }
